<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.BookDatailsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/bookImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/imagem2"
                    tools:ignore="ContentDescription,InefficientWeight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Titulo"
                    android:textColor="#000000"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/textAutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autor"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"/>


            </LinearLayout>


            <Button
                android:id="@+id/addToBookshelfButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/darkGray"
                android:text="@string/adicionar_estante" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/lightGray"
                android:padding="20dp"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/textSinopse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing"
                    android:textColor="@color/darkGray"
                    android:textSize="15sp"
                    tools:ignore="TextSizeCheck"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>